--- a/index.html
+++ b/index.html
@@ -1,82 +1,72 @@
 <!doctype html>
 <html>
-    <head>
-        <title>Gear5 OPvideo</title>
-        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
-        <script>
-            window.onload = function() {
-            AFRAME.registerComponent('videohandler', {
-                init: function () {
-                    var my-marker = this.el;
-                    this.vid = document.querySelector("#vid");
+<head>
+    <title>Gear5-OPvideo</title>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script>
+        AFRAME.registerComponent('videohandler', {
+            init: function () {
+                var myMarker = this.el;
+                this.vid = document.querySelector("#vid");
 
-                    my-marker.addEventListener('markerFound', function () {
-                        this.toggle = true;
-                        this.vid.play();
-                    }.bind(this));
+                myMarker.addEventListener('markerFound', () => {
+                    this.vid.play();
+                });
 
-                    my-marker.addEventListener('markerLost', function () {
-                        this.toggle = false;
-                        this.vid.pause();
-                    }.bind(this));
-                },
-            }
-          });
-        </script>
-    </head>
+                myMarker.addEventListener('markerLost', () => {
+                    this.vid.pause();
+                });
+            },
+        });
+    </script>
+</head>
 
-    <body style="margin: 0; overflow: hidden;">
-        <a-scene
-            vr-mode-ui="enabled: false"
-            loading-screen="enabled: false;"
-            arjs='sourceType: webcam; debugUIEnabled: false;'
-            id="scene"
-            embedded
-            gesture-detector
+<body style="margin: 0; overflow: hidden;">
+    <a-scene
+        vr-mode-ui="enabled: false"
+        loading-screen="enabled: false;"
+        arjs='sourceType: webcam; debugUIEnabled: false;'
+        id="scene"
+        embedded
+        gesture-detector
+    >
+        <a-assets>
+            <video
+                id="vid"
+                src="assets/asset.mp4"
+                preload="auto"
+                crossorigin="anonymous"
+                loop
+                playsinline
+            ></video>
+        </a-assets>
+
+        <a-marker
+            type="pattern"
+            preset="custom"
+            url="assets/my-marker.patt"
+            videohandler
+            smooth="true"
+            smoothCount="10"
+            smoothTolerance="0.01"
+            smoothThreshold="5"
+            raycaster="objects: .clickable"
+            emitevents="true"
+            cursor="fuse: false; rayOrigin: mouse;"
+            id="markerA"
         >
-            <a-assets>
-                <video
-                    id="vid"
-                    src="assets/asset.mp4"
-                    preload="auto"
-                    response-type="arraybuffer"
-                    loop
-                    crossorigin
-                    webkit-playsinline
-                    autoplay
-                    unmuted
-                    playsinline
-                ></video>
-            </a-assets>
-
-            <a-marker
-                type="pattern"
-                preset="custom"
-                url="assets/my-marker.patt"
-                videohandler
-                smooth="true"
-                smoothCount="10"
-                smoothTolerance="0.01"
-                smoothThreshold="5"
-                raycaster="objects: .clickable"
-                emitevents="true"
-                cursor="fuse: false; rayOrigin: mouse;"
-                id="markerA"
-            >
-                <a-video
-                    src="assets/asset.mp4"
-                    scale="1 1 1"
-                    position="0 0.1 0"
-                    rotation="-90 0 0"
-                    class="clickable"
-                    gesture-handler
-                ></a-video>
-            </a-marker>
-                
-            <a-entity camera></a-entity>
-        </a-scene>
-    </body>
+            <a-video
+                src="#vid"
+                scale="1 1 1"
+                position="0 0.1 0"
+                rotation="-90 0 0"
+                class="clickable"
+                gesture-handler
+            ></a-video>
+        </a-marker>
+            
+        <a-entity camera></a-entity>
+    </a-scene>
+</body>
 </html>
