--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>GodNikaOPvideo</title>
+    <title>Gear5 OPvideo</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script>
@@ -9,13 +9,20 @@
             init: function () {
                 var myMarker = this.el;
                 this.vid = document.querySelector("#vid");
+                var playButton = document.querySelector("#playButton");
 
                 myMarker.addEventListener('markerFound', () => {
-                    this.vid.play();
+                    playButton.style.display = "block";
                 });
 
                 myMarker.addEventListener('markerLost', () => {
+                    playButton.style.display = "none";
                     this.vid.pause();
+                });
+
+                playButton.addEventListener('click', () => {
+                    this.vid.play();
+                    playButton.style.display = "none";
                 });
             },
         });
@@ -29,7 +36,7 @@
         arjs='sourceType: webcam; debugUIEnabled: false;'
         id="scene"
         embedded
-        gesture-detector
+        gesture-detector <!-- Keep the gesture-detector component -->
     >
         <a-assets>
             <video
@@ -48,9 +55,6 @@
             url="assets/my-marker.patt"
             videohandler
             smooth="true"
-            smoothCount="10"
-            smoothTolerance="0.01"
-            smoothThreshold="5"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
@@ -58,13 +62,16 @@
         >
             <a-video
                 src="#vid"
-                scale="1 1 1"
-                position="0 0.1 0"
+                scale="0.2 0.2 0.2"
+                position="0 0.05 0"
                 rotation="-90 0 0"
                 class="clickable"
-                gesture-handler
+                gesture-handler <!-- Keep the gesture-handler component -->
             ></a-video>
         </a-marker>
+        
+        <!-- Play Button -->
+        <button id="playButton" style="display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Play Video</button>
             
         <a-entity camera></a-entity>
     </a-scene>
