--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Gear5 OPvideo</title>
@@ -38,7 +38,7 @@
         arjs='sourceType: webcam; debugUIEnabled: false;'
         id="scene"
         embedded
-        gesture-detector <!-- Keep the gesture-detector component -->
+        gesture-detector
     >
         <a-assets>
             <video
@@ -64,11 +64,11 @@
         >
             <a-video
                 src="#vid"
-                scale="0.2 0.2 0.2"
-                position="0 0.05 0"
+                scale="1 1 1" <!-- Adjust the scale as needed -->
+                position="0 0.1 0"
                 rotation="-90 0 0"
                 class="clickable"
-                gesture-handler <!-- Keep the gesture-handler component -->
+                gesture-handler
             ></a-video>
         </a-marker>
         
