--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-    <title>NIKAOPvideo</title>
+    <title>Gear5 OPvideo</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
     <script>
         AFRAME.registerComponent('videohandler', {
             init: function () {
@@ -64,7 +62,7 @@
         >
             <a-video
                 src="#vid"
-                scale="1 1 1" <!-- Adjust the scale as needed -->
+                scale="1 1 1"
                 position="0 0.1 0"
                 rotation="-90 0 0"
                 class="clickable"
