--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>OPvideo-GodNika</title>
+    <title>Gear5 OPvideo</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script>
@@ -9,20 +9,13 @@
             init: function () {
                 var myMarker = this.el;
                 this.vid = document.querySelector("#vid");
-                var playButton = document.querySelector("#playButton");
 
                 myMarker.addEventListener('markerFound', () => {
-                    playButton.style.display = "block";
+                    this.vid.play();
                 });
 
                 myMarker.addEventListener('markerLost', () => {
-                    playButton.style.display = "none";
                     this.vid.pause();
-                });
-
-                playButton.addEventListener('click', () => {
-                    this.vid.play();
-                    playButton.style.display = "none";
                 });
             },
         });
@@ -55,6 +48,9 @@
             url="assets/my-marker.patt"
             videohandler
             smooth="true"
+            smoothCount="10"
+            smoothTolerance="0.01"
+            smoothThreshold="5"
             raycaster="objects: .clickable"
             emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;"
@@ -69,9 +65,6 @@
                 gesture-handler
             ></a-video>
         </a-marker>
-        
-        <!-- Play Button -->
-        <button id="playButton" style="display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Play Video</button>
             
         <a-entity camera></a-entity>
     </a-scene>
