--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a-assets>
             <video
                 id="vid"
-                src="assets/asset.mp4"
+                src="assets/love.mp4"
                 preload="auto"
                 crossorigin="anonymous"
                 loop
@@ -45,7 +45,7 @@
         <a-marker
             type="pattern"
             preset="custom"
-            url="assets/my-marker.patt"
+            url="assets/lovemarker.patt"
             videohandler
             smooth="true"
             smoothCount="10"
