--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Gear5 OPvideo</title>
+    <title>MYLOVE</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script>
@@ -45,7 +45,7 @@
         <a-marker
             type="pattern"
             preset="custom"
-            url="assets/lovemarker.patt"
+            url="assets/my-marker.patt"
             videohandler
             smooth="true"
             smoothCount="10"
