--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a-marker
             type="pattern"
             preset="custom"
-            url="assets/my-marker.patt"
+            url="assets/lovemarker.patt"
             videohandler
             smooth="true"
             smoothCount="10"
